fix: dispatch fora do lock, isolamento do reaper e composition root explicito
Revisao contra as skills do projeto (hexagonal-architecture, java-springboot,
java-junit) mais os bugs que a rodada anterior introduziu.

Bugs:
- o dispatch do processamento acontecia DENTRO do lock distribuido da chave de
  coalescing, e o executor bloqueia ao saturar: um submit segurando o lock
  travava todos os submits daquele type em todas as instancias (o watchdog do
  Redisson renova o lock, entao nao se resolvia sozinho). Agora decide/persiste/
  reivindica sob o lock e enfileira depois de liberar; recusa do executor nao
  invalida a submissao, a varredura reenfileira
- o reaper reenfileirava qualquer job PENDING velho do indice, inclusive de
  types que a instancia nao conhece: em deployment heterogeneo (ou duas apps no
  mesmo banco) ele matava jobs alheios com Unknown job type. Agora so age sobre
  types registrados localmente
- async-jobs.key-prefix isola aplicacoes que compartilham o banco; todos os
  nomes de chave passam a viver em RedisKeys
- complete(jobId, result) anexava itens sem checar estado, furando a guarda que
  o append ja tinha: agora recusa job terminal antes de escrever
- async-jobs.recovery.enabled tinha campo no record E @ConditionalOnProperty; o
  campo saiu e a propriedade foi declarada em additional-spring-configuration-
  metadata.json (o padrao do Spring para propriedade so-condicional)

Arquitetura (skill hexagonal-architecture):
- core sem framework: @Service e @ComponentScan removidos dos use cases e
  services; todo o wiring agora e explicito na auto-configuration, um
  composition root unico e auditavel
- spring-boot-configuration-processor gera metadata das propriedades

Testes (lacuna apontada pelas skills java-springboot/java-junit):
- 44 testes unitarios com fakes/Mockito, sem contexto Spring: ordem
  claim-sob-lock vs dispatch-fora-do-lock, evento com instante persistido,
  politica do reaper por status/inatividade (@ParameterizedTest), guardas